# hex-fence

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GAME_RULES.md  HEX_GRID.md  ISSUES.md  justfile  shell.nix
crates/core/: Cargo.toml
crates/core/src/: encoding.rs  fence_rules.rs  heuristic.rs  hex.rs  lib.rs  mcts.rs  onnx.rs  player.rs  progress.rs  rules_tests.rs  state.rs
crates/eval/: Cargo.toml
crates/eval/src/: main.rs
crates/selfplay/: Cargo.toml
crates/selfplay/src/: main.rs
pipeline/: check_shard.py  contract.py  data.py  export_onnx.py  init_model.py  model.py  ort_check.py  parity.py  run.py  test_contract.py  train.py
run7/models/: gen5.onnx.json
src/: app_state.rs  board.rs  camera.rs  hex_grid.rs  main.rs  network.rs  settings.rs  ui.rs
src/game/: actions.rs  ai.rs  audio.rs  components.rs  fence.rs  highlight.rs  input.rs  mod.rs  neural.rs  player.rs  rules_tests.rs  selection.rs  spawn.rs  state.rs  ui.rs  utils.rs
src/ui/: common.rs  components.rs  in_game_menu.rs  mod.rs  start_menu.rs  styles.rs  widgets.rs
